Module has been improved for use with Expressive

--- a/view/grid/toolbar.phtml
+++ b/view/grid/toolbar.phtml
@@ -1,4 +1,4 @@
-<?php /** @var Agere\Block\Block\Admin\Toolbar $toolbar */ ?>
+<?php /** @var Popov\ZfcBlock\Block\Admin\Toolbar $toolbar */ ?>
 <?php //return ?>
 <?php $toolbar = $this->viewModel()->getCurrent()->getVariable('toolbar'); ?>
 <?php if (is_object($toolbar)) : ?>
