--- a/view/grid/export.phtml
+++ b/view/grid/export.phtml
@@ -12,7 +12,7 @@ foreach ($this->parameters as $name => $value) {
 
 <?php foreach ($this->exportRenderers as $type => $name) : ?>
     <?php $urlExport = $url . '?' . $this->generalParameterNames['rendererType'] . '=' . $type . $parametersAdd; ?>
-    <a class="btn btn-default btn-xs" href="<?= $urlExport ?>">
+    <a class="btn btn-default btn-sm" href="<?= $urlExport ?>">
         <?= $name ?>
     </a>
 <?php endforeach ?>
