Row height has been reduced

--- a/view/grid/layout.phtml
+++ b/view/grid/layout.phtml
@@ -222,7 +222,7 @@ $(document).ready(function () {
         //width: 'auto',
         //height: '600px',
         //height: 'auto',
-        height: '<?= $this->width ?? 'auto' ?>',
+        height: '<?= $this->height ?? 'auto' ?>',
         scrollerbar:true,
         /*height: function() {
          var wHeight = $(window).height();
