--- a/view/grid/layout.phtml
+++ b/view/grid/layout.phtml
@@ -496,6 +496,7 @@ $(document).ready(function () {
 
     <?php endif; ?>
 
+    <?php //echo $this->partial($this->templateСhooser, ['navButtons' => $this->navButtons ]);?>
 
     <?php if ($this->data['total']) : ?>
         /*
