PhpDoc package name, author added.

--- a/view/grid/button/buttons.phtml
+++ b/view/grid/button/buttons.phtml
@@ -8,8 +8,8 @@
  * https://opensource.org/licenses/MIT
  *
  * @category Popov
- * @package Popov_<package>
- * @author Serhii Popov <popow.serhii@gmail.com>
+ * @package Popov_ZfcDataGrid
+ * @author Serhii Popov <popow.serhii@gmail.com>, Andrey Andreev <andrey.andreev1995@gmail.com>
  * @license https://opensource.org/licenses/MIT The MIT License (MIT)
  */
 ?>
