PhpDoc @author tag changed according to standard.

--- a/view/grid/button/buttons.phtml
+++ b/view/grid/button/buttons.phtml
@@ -9,7 +9,8 @@
  *
  * @category Popov
  * @package Popov_ZfcDataGrid
- * @author Serhii Popov <popow.serhii@gmail.com>, Andrey Andreev <andrey.andreev1995@gmail.com>
+ * @author Serhii Popov <popow.serhii@gmail.com>
+ * @author Andrey Andreev <andrey.andreev1995@gmail.com>
  * @license https://opensource.org/licenses/MIT The MIT License (MIT)
  */
 ?>
