--- a/view/grid/layout.phtml
+++ b/view/grid/layout.phtml
@@ -538,4 +538,7 @@ $(document).ready(function () {
 <?php endif; ?>
 </script>
 
-<?php echo $this->partial('datagrid/buttons', ['navButtons' => $this->navButtons, 'gridId' => $this->gridId ]);?>
+<?php echo $this->partial('zfc-datagrid/renderer/jqGrid/buttons', [
+    'navButtons' => $this->navButtons,
+    'gridId' => $this->gridId,
+]); ?>
