--- a/view/grid/layout.phtml
+++ b/view/grid/layout.phtml
@@ -263,18 +263,22 @@ $(document).ready(function () {
         sortname: '<?php echo $this->activeParameters[$parameterNames['sortColumns']]; ?>',
         sortorder: '<?php echo $this->activeParameters[$parameterNames['sortDirections']]; ?>',
 
-        footerrow: <?= isset($this->gridFooterRow) ? (int) $this->gridFooterRow : 0 ?>,
+        footerrow: <?= isset($this->gridFooterRow['total']) ? (int) $this->gridFooterRow : 0 ?>,
         userDataOnFooter: <?= isset($this->userDataOnFooter) ? (int) $this->userDataOnFooter : 0 ?>,
 
-        gridComplete: function () {
-            var $gridTotal = $('#marketOrder_grid');
-            var colSum = $gridTotal.jqGrid('getCol', 'marketOrder_orderTotal', false, 'sum');
-          $gridTotal.jqGrid('footerData', 'set',
-            {
-              'customer_email': 'Total: ',
-              'marketOrder_orderTotal': Number.parseFloat(colSum).toFixed(2)
-            });
-        },
+        <?php if (isset($this->gridFooterRow['total'])) : ?>
+	      gridComplete: function () {
+	        var $gridTotal = $('#<?php echo $this->gridId; ?>_grid');
+	        var colSum = $gridTotal.jqGrid('getCol', '<?php echo $this->gridFooterRow['total']?>', false, 'sum');
+	        $gridTotal.jqGrid('footerData', 'set',
+	          {
+	              <?php if (isset($this->gridFooterRow['labelField'])) : ?>
+	            '<?php echo $this->gridFooterRow['labelField']?>': 'Total: ',
+	              <?php endif; ?>
+                '<?php echo $this->gridFooterRow['total']?>': Number.parseFloat(colSum).toFixed(2)
+	          });
+	      },
+        <?php endif; ?>
 
         prmNames : {
             page: '<?php echo $parameterNames['currentPage']; ?>',
