useTransSid setting added

--- a/view/grid/export.phtml
+++ b/view/grid/export.phtml
@@ -1,5 +1,5 @@
-<?php 
-$url = $this->url(null, array(), array(), true);
+<?php
+$url = $this->url(null, [], ['force_canonical' => true], true);
 if($this->overwriteUrl != ''){
     $url = $this->overwriteUrl;
 }
