ColumnChooser has been enabled

--- a/view/grid/layout.phtml
+++ b/view/grid/layout.phtml
@@ -530,7 +530,7 @@ $(document).ready(function () {
 <?php endif; ?>
 </script>
 
-<?php /*echo $this->partial('zfc-datagrid/renderer/jqGrid/buttons', [
+<?php echo $this->partial('zfc-datagrid/renderer/jqGrid/buttons', [
     'navButtons' => $this->navButtons,
     'gridId' => $this->gridId,
-])*/ ?>
+]) ?>
